removing unwanted version

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Kepstin’s Magic ISRC submitter (version 2016.10.18.1315)</title>
+    <title>Kepstin’s Magic ISRC submitter</title>
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 <script type="text/javascript">
 
