--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Kepstin’s Magic ISRC submitter</title>
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="bootstrap.min.css">
 <script type="text/javascript">
 
 var ws2_read_base = "https://musicbrainz.org/ws/2/";
