--- a/index.html
+++ b/index.html
@@ -841,7 +841,7 @@ function restoreScrollPosition() {
 </div>
 <footer class="text-muted my-3">
   <div class="container">
-    <p>Copyright Ⓒ2019 Calvin Walton. Available under the terms of the MIT license. Browse the source on <a href="https://github.com/kepstin/magicisrc">Github</a>.</p>
+    <p>Copyright ©2019 Calvin Walton. Available under the terms of the MIT license. Browse the source on <a href="https://github.com/kepstin/magicisrc">Github</a>.</p>
   </div>
 </footer>
 <script type="text/javascript">
