Add BC, XK country codes from ISRC Bulletin 2015-01 update
The 2019-12-05 update adds an additional allocation for Brazil (BC) and
a new allocation for Kosovo (XK)

--- a/index.html
+++ b/index.html
@@ -259,11 +259,11 @@ function checkISRCs(release, params) {
   console.log(isrcs);
 }
 
-var ccodesUpdated = '2015-11-23'; /* https://isrc.ifpi.org/downloads/ISRC_Bulletin-2015-01.pdf Updated 23rd November 2015 */
+var ccodesUpdated = '2019-12-05'; /* https://isrc.ifpi.org/downloads/ISRC_Bulletin-2015-01.pdf Updated December 5th 2019 */
 var ccodes = [
   'AL', 'DZ', 'AD', 'AO', 'AI', 'AG', 'AR', 'AM', 'AW', 'AU', 'AT', 'AZ',
   'BS', 'BH', 'BD', 'BB', 'BY', 'BE', 'BZ', 'BM', 'BO', 'BA', 'BR', 'BX',
-  'BG', 'BF',
+  'BC', 'BG', 'BF',
   'CM', 'CA', 'KY', 'CL', 'CN', 'TW', 'CO', 'CD', 'CI', 'HR', 'CU', 'CW',
   'CY', 'CZ',
   'DK', 'DM', 'DO',
@@ -273,7 +273,7 @@ var ccodes = [
   'HT', 'HN', 'HK', 'HU',
   'IS', 'IN', 'ID', 'IR', 'IQ', 'IE', 'IL', 'IT',
   'JM', 'JP', 'JE', 'JO',
-  'KZ', 'KE', 'KR',
+  'KZ', 'KE', 'KR', 'XK',
   'LA', 'LV', 'LB', 'LS', 'LI', 'LT', 'LU',
   'MO', 'MK', 'MW', 'MY', 'MV', 'MT', 'MU', 'MX', 'MD', 'MC', 'ME', 'MS',
   'MA', 'MZ',
