Add a privacy policy document.

--- a/index.html
+++ b/index.html
@@ -851,6 +851,7 @@ function restoreScrollPosition() {
 </div>
 <footer class="text-muted my-3">
   <div class="container">
+    <p><a href="privacy.html">Privacy Policy</a></p>
     <p>Copyright ©2019 Calvin Walton. Available under the terms of the MIT license. Browse the source on <a href="https://github.com/kepstin/magicisrc">Github</a>.</p>
   </div>
 </footer>
