--- a/index.html
+++ b/index.html
@@ -259,12 +259,12 @@ function checkISRCs(release, params) {
   console.log(isrcs);
 }
 
-var ccodesUpdated = '2019-12-05'; /* https://isrc.ifpi.org/downloads/ISRC_Bulletin-2015-01.pdf Updated December 5th 2019 */
+var ccodesUpdated = '2021-05-25'; /* https://isrc.ifpi.org/downloads/ISRC_Bulletin-2015-01.pdf Updated May 25 2021 */
 var ccodes = [
   'AL', 'DZ', 'AD', 'AO', 'AI', 'AG', 'AR', 'AM', 'AW', 'AU', 'AT', 'AZ',
-  'BS', 'BH', 'BD', 'BB', 'BY', 'BE', 'BZ', 'BM', 'BO', 'BA', 'BR', 'BX',
-  'BC', 'BG', 'BF',
-  'CM', 'CA', 'KY', 'CL', 'CN', 'TW', 'CO', 'CD', 'CI', 'HR', 'CU', 'CW',
+  'BS', 'BH', 'BD', 'BB', 'BY', 'BE', 'BZ', 'BM', 'BO', 'BA', 'BR', 'BP',
+  'BX', 'BC', 'BG', 'BF',
+  'CM', 'CA', 'CB', 'KY', 'CL', 'CN', 'TW', 'CO', 'CD', 'CI', 'HR', 'CU', 'CW',
   'CY', 'CZ',
   'DK', 'DM', 'DO',
   'EC', 'EG', 'SV', 'EE', 'ET',
@@ -273,7 +273,7 @@ var ccodes = [
   'HT', 'HN', 'HK', 'HU',
   'IS', 'IN', 'ID', 'IR', 'IQ', 'IE', 'IL', 'IT',
   'JM', 'JP', 'JE', 'JO',
-  'KZ', 'KE', 'KR', 'XK',
+  'KZ', 'KE', 'KR', 'KS', 'XK',
   'LA', 'LV', 'LB', 'LS', 'LI', 'LT', 'LU',
   'MO', 'MK', 'MW', 'MY', 'MV', 'MT', 'MU', 'MX', 'MD', 'MC', 'ME', 'MS',
   'MA', 'MZ',
@@ -282,9 +282,9 @@ var ccodes = [
   'QA',
   'RO', 'RU',
   'KN', 'LC', 'VC', 'SM', 'SA', 'SN', 'RS', 'SC', 'SL', 'SG', 'SX', 'SK',
-  'SI', 'SB', 'ZA', 'ES', 'LK', 'SZ', 'SE', 'CH',
+  'SI', 'SB', 'ZA', 'ZB', 'ES', 'LK', 'SZ', 'SE', 'CH',
   'TZ', 'TH', 'TO', 'TT', 'TN', 'TR',
-  'UG', 'UA', 'AE', 'GB', 'UK', 'US', 'QM', 'QZ', 'UY', 'UZ',
+  'UG', 'UA', 'AE', 'GB', 'UK', 'GX', 'US', 'QM', 'QZ', 'UY', 'UZ',
   'VU', 'VE', 'VN', 'VG',
   'ZM', 'ZW',
   'TC', /* TuneCore */
