Ensure the media.tracks array is always present
The MusicBrainz response doesn't include the "tracks" property on the
medium at all if the medium has no tracks. Since an array is expected in
many places in the MagicISRC code, do a cleanup to add an empty array in
that case.

Fixes #7

--- a/index.html
+++ b/index.html
@@ -218,6 +218,10 @@ function checkISRCs(release, params) {
   // Initialize ISRC history with existing ISRCs on the release
   for (let i = 0; i < release["media"].length; i++) {
     let media = release["media"][i];
+    // Mediums from Musicbrainz with no tracks don't include the "tracks"
+    // property in the response at all; provide an empty array instead.
+    if (!media["tracks"]) { media["tracks"] = []; }
+
     for (let j = 0; j < media["tracks"].length; j++) {
       let recording = media["tracks"][j]["recording"];
       for (let k = 0; k < recording["isrcs"].length; k++) {
